@@ -741,7 +741,12 @@ initpycurl(void)
     insint_c(d, "NOSIGNAL", CURLOPT_NOSIGNAL);
     insint_c(d, "SHARE", CURLOPT_SHARE);
     insint_c(d, "PROXYTYPE", CURLOPT_PROXYTYPE);
+    /* superseded by ACCEPT_ENCODING */
     insint_c(d, "ENCODING", CURLOPT_ENCODING);
+#if LIBCURL_VERSION_NUM >= MAKE_LIBCURL_VERSION(7, 21, 6)
+    insint_c(d, "ACCEPT_ENCODING", CURLOPT_ACCEPT_ENCODING);
+    insint_c(d, "TRANSFER_ENCODING", CURLOPT_TRANSFER_ENCODING);
+#endif
     insint_c(d, "HTTP200ALIASES", CURLOPT_HTTP200ALIASES);
     insint_c(d, "UNRESTRICTED_AUTH", CURLOPT_UNRESTRICTED_AUTH);
     insint_c(d, "FTP_USE_EPRT", CURLOPT_FTP_USE_EPRT);
